[tool.poetry]
name = "todoist-scripts"
version = "0.1.0"
description = ""
authors = ["Joseph Demcher <joedemcher@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
todoist-api-python = "^2.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
